src/yini_test/cases/golden/strict/valid/inline-objects/deeply-nested-inline-object.strict.yini
@yini strict

^ Objects
entry = { a: { b: { c: 1 } } }

/END

