src/yini_test/cases/golden/strict/invalid/inline-objects/inline-object-opening-on-next-line.strict.yini
@yini strict

^ Objects
entry =
{ a: 1 }

/END

